# functional-readings

./: Main.hs  functional-readings.cabal
ADT/: Main.hs  Stack.hs
Pickler/: CorePickle.hs  Main.hs  Pickle.hs  PickleCore.hs  SCorePickle.hs  SMain.hs  SPickle.hs
Pretty/: Main.hs  Pretty.hs
pretty/: Main.hs  Pretty.hs
