name:                functional-readings
version:             0.1.0.0
license-file:        LICENSE
author:              Nicolas
maintainer:          nicolas.rolland@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fun
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010